# ydbdoc-review

./: .env.example  .gitignore  AGENT_TASKS.md  AGENT_TASK_DIFFERENTIAL_TRANSLATION.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  MEMORY_BANK.md  README.md  ROLLBACK.md  action-docker.sh  action.yml  entrypoint.sh  pyproject.toml  requirements.txt
docs/: translation-pipeline-v2.md
examples/: ydb-github-doc-continue-on-label.yml  ydb-github-doc-translate-on-label.yml  ydb-github-doc-verify-on-label.yml
prompts/: 01_analyze_translation_pairs.txt  02_translate_article.txt  03_translate_ru_diff_to_en.txt  04_translate_en_diff_to_ru.txt  05_verify_translation.txt  06_fix_translation.txt  07_confirm_repair.txt  08_translate_segment.txt  09_quality_heuristics.md  10_translate_file_with_plan.txt  11_annotated_chunk.txt  12_translate_placeholder_json.txt  13_translate_masked_document.txt  en_style_guide.md  glossary.example.md  translate_quality_hierarchy.md
scripts/: analyze_masked_pipeline.py  debug_auth_table.py  dump_masked_requests.py  dump_placeholder_requests.py  dump_translate_requests.py  fetch_fixtures.sh  fetch_nav_fixtures.py  find_en_toc_orphans.py  find_toc_orphans.py  inspect_yfm.py  scan_yfm.py  smoke_yandex.py  translate_one_file.py  ydb_schema_run_objects.yql  ydb_schema_runs.yql
tests/: conftest.py  test_annotated_translate.py  test_cyrillic_repair.py  test_cyrillic_repair_scope.py  test_document_mask.py  test_document_segments.py  test_document_structure.py  test_en_fragment_postprocess.py  test_fence_inline_comments.py  test_fence_parity_and_links.py  test_fence_structure_repair.py  test_fence_translate.py  test_file_translate.py  test_fm_progress.py  test_github_branch_delete.py  test_heuristics.py  test_list_tabs_blocks.py  test_markdown_blocks.py  test_markdown_links_repair.py  test_masked_chunking.py  test_masked_chunking_fences.py  test_masked_tabs_fences.py  test_masked_translate.py  test_model_fallback.py  test_pair_diff.py  test_pipeline_v2_qa.py  test_placeholder_translate.py  test_pr41667_fixes.py  test_pr41677_fixes.py  test_prompt_builder.py  (+10 more)
(+311 files in other folders)
