[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ydbdoc-review"
version = "0.2.0.dev0"
description = "AST-based translation pipeline for YDB documentation"
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "pydantic>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
ydbdoc-review = "ydbdoc_review.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ydbdoc_review.config" = ["default.yaml"]
"ydbdoc_review.prompts" = ["glossary.yaml", "v1/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers --ignore=tests/integration/test_llm_smoke.py"
markers = [
    "integration: integration tests (require network/API)",
    "slow: slow tests",
    "llm: live LLM API tests (local only, requires credentials)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
